# QualCommUMA

./: .gitignore  UMA验证总结.md  build_gpu_bandwidth_test.sh  build_opencl_uma_test.sh  build_qnn_uma_test.sh  build_uma_demo.sh  build_unified_uma_test.sh  custom_multiply_op_package.cpp  custom_multiply_op_package.h  custom_op_package.cpp  custom_op_package.h  fill_array.cl  gpu_bandwidth_test.cl  gpu_bandwidth_test.cpp  opencl_uma_demo.cpp  qnn_uma_demo.cpp  qnn_uma_real_demo.cpp  uma_demo.cpp  unified_uma_demo.cpp
concurrent_bandwidth_test/: CMakeLists.txt  README.md  build_android.sh  run_on_device.sh
concurrent_bandwidth_test/kernels/: element_add.cl
concurrent_bandwidth_test/src/: common.h  gpu_bandwidth.cpp  gpu_bandwidth.h  htp_bandwidth.cpp  htp_bandwidth.h  main.cpp
demo_qnn_htp_add/: CMakeLists.txt  run_on_device.sh
demo_qnn_htp_add/src/: main.cpp
fast_sync_test/: CMakeLists.txt  README.md
fast_sync_test/custom_op/: Makefile  SyncWaitOpPackageInterface.cpp  SyncWaitOpPackageSyncWait.cpp  build.sh
fast_sync_test/heteroedge_op/: HeteroEdgeInterface.cpp  HeteroEdgeRmsNorm.cpp  HeteroEdgeSyncWait.cpp  Makefile  build.sh
fast_sync_test/src/: common.h  main.cpp  npu_engine.cpp  npu_engine.h  pipeline.cpp  test_graph_overhead.cpp
htp_bandwidth_test/: CMakeLists.txt  README.md  build_android.sh  run_on_device.sh
htp_bandwidth_test/src/: main.cpp
include/CL/: cl_ext.h
qnn_htp_bandwidth/: CHANGELOG.md  QNN示例代码分析.md  README.md  带宽瓶颈分析.md
qnn_htp_bandwidth/configs/: htp_vtcm_config.json
qnn_htp_bandwidth/data/: input_list_elementwise.txt
qnn_htp_bandwidth/models/: qnn_elementwise_add_model.pt  qnn_elementwise_add_model.pth
qnn_htp_bandwidth/models/qnn_models_elementwise/: elementwise_add.cpp  elementwise_add_net.json
qnn_htp_bandwidth/scripts/: build_elementwise_bandwidth_test.sh  convert_elementwise_to_qnn.sh  qnn_htp_elementwise_bandwidth_model.py  verify_step_by_step.sh
qnn_htp_bandwidth/src/: qnn_htp_elementwise_bandwidth_test.cpp
rmsnorm/: CMakeLists.txt  README.md  build_android.sh  run_on_device.sh
rmsnorm/kernels/: rmsnorm.cl
rmsnorm/src/: main.cpp
rmsnorm/triton_rmsnorm/: README.md  rmsnorm_kernel.py  setup_env.sh
rmsnorm_benchmark/: CMakeLists.txt  README.md  build_android.sh  run_on_device.sh
rmsnorm_benchmark/kernels/: rmsnorm.cl
rmsnorm_benchmark/src/: common.h  gpu_rmsnorm.cpp  gpu_rmsnorm.h  main.cpp  npu_rmsnorm.cpp  npu_rmsnorm.h
sync_op_test/: CMakeLists.txt  build_android.sh  run_on_device.sh
sync_op_test/src/: main.cpp
